MH-7644: fixed the bad alignment of filechoose
git-svn-id: https://opencast.jira.com/svn/MH/trunk@10953 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -144,7 +144,7 @@ table#agentsTable th, table#seriesTable th, table#recordingsTable th, table#stat
 /* FORM LISTS */
 .lbl_radio { vertical-align: 10% }
 .oc-ui-form-list li { padding: 4px 0; }
-.oc-ui-form-list .scheduler-label { display: inline-block; width: 35%; text-align: right; vertical-align: top; }
+.oc-ui-form-list .scheduler-label, .scheduler-label { display: inline-block; width: 35%; text-align: right; vertical-align: top; }
 .oc-ui-form-field { border: 1px #aaa solid; width: 450px; }
 .oc-ui-checkbox-list { padding-left: 30px; }
 .oc-ui-collapsible-widget > .ui-widget-content { display: none; }
